--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,27 +16,8 @@
   align-items: center;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .title a {
-  color: #0070f3;
+  color: #4d9f4e;
   text-decoration: none;
 }
 
@@ -95,8 +76,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #4d9f4e;
+  border-color: #4d9f4e;
 }
 
 .card h3 {
